--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "express-api-starter",
+  "name": "react_file_upload",
   "version": "1.0.0",
-  "description": "Starter project to get up and running with express quickly",
+  "description": "App for uploading files",
   "scripts": {
-    "start": "babel-node server.js",
-    "dev": "nodemon server.js --exec babel-node"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "express-fileupload": "^1.1.7-alpha.3"
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-import": "^0.13.0"
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-import": "^0.13.0",
+    "nodemon": "^2.0.4"
   }
 }
